test client -> PdQ

--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
@@ -2072,25 +2072,34 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 \hypertarget{TU43}{TU43} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la keyword ``return'' seguita dal valore da ritornare e da un punto e virgola. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU44}{TU44} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un ciclo while e il corpo del ciclo. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU45}{TU45} & Un \texttt{Compressor} è in grado di comprimere in formato ZIP una directory nel filesystem del server. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU46}{TU46} & \texttt{AppView.views} è un oggetto. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU47}{TU47} & \texttt{AppView.views.project} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU48}{TU48} & ProjectView.paper è un joint.dia.Paper & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU49}{TU49} & \texttt{AppView.views.details} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU50}{TU50} & \texttt{AppView.views.newCell} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU51}{TU51} & \texttt{NewCellFactory} è in grado di fornire una \texttt{HxClass}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU52}{TU52} & \texttt{NewCellFactory} è in grado di fornire una \texttt{HxInterface}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU53}{TU53} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxComment}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU54}{TU54} & \texttt{NewCellFactory} è in grado di fornire una \texttt{HxGeneralization}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU55}{TU55} & \texttt{NewCellFactory} è in grado di fornire una \texttt{HxAssociation}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU56}{TU56} & \texttt{NewCellFactory} è in grado di fornire una \texttt{HxImplementation}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU57}{TU57} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxCustom}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU58}{TU58} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxElse}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU59}{TU59} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxFor}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU60}{TU60} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxIf}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU61}{TU61} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxVariable}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU62}{TU62} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxReturn}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU63}{TU63} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxWhile}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU64}{TU64} & Un \texttt{RequestHandlerController} è in grado di rispondere a una richiesta \texttt{handleGeneratorRequest} senza lanciare eccezioni. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU46}{TU46} & Un \texttt{RequestHandlerController} è in grado di rispondere a una richiesta \texttt{handleGeneratorRequest} senza lanciare eccezioni. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU47}{TU47} & Un \texttt{JavaCompiler} a cui venga chiesto di compilare i file di una directory inesistente ritorna una lista di errori contenente l'errore ``[cartella] is not a valid directory''. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU48}{TU48} & Una \texttt{AppView} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU49}{TU49} & Una \texttt{AppView} possiede un oggetto \texttt{views}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU50}{TU50} & Una \texttt{ProjectView} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU51}{TU51} & Una \texttt{ProjectView} è in grado di disegnare un diagramma di attività. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU52}{TU52} & Una \texttt{ProjectView} possiede un \texttt{joint.dia.Paper}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU53}{TU53} & Una \texttt{DetailsView} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU54}{TU54} & Una \texttt{DetailsView} è in grado di disegnare il riquadro dei dettagli. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU55}{TU55} & Una \texttt{NewCellView} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU56}{TU56} & Una \texttt{NewCellView} è in grado di disegnare il riquadro di creazione. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU57}{TU57} & Un \texttt{ProjectModel} è un \texttt{backbone.Model}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU58}{TU58} & Un \texttt{ProjectModel} è in grado di creare un nuovo progetto. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU59}{TU59} & Un \texttt{NewCellModel} è un \texttt{backbone.Model}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU60}{TU60} & Una \texttt{NewCellFactory} è in grado di istanziare una \texttt{HxClass}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU61}{TU61} & Una \texttt{NewCellFactory} è in grado di istanziare una \texttt{HxInterface}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU62}{TU62} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxComment}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU63}{TU63} & Una \texttt{NewCellFactory} è in grado di istanziare una \texttt{HxGeneralization}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU64}{TU64} & Una \texttt{NewCellFactory} è in grado di istanziare una \texttt{HxAssociation}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU65}{TU65} & Una \texttt{NewCellFactory} è in grado di istanziare una \texttt{HxImplementation}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU66}{TU66} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxCustom}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU67}{TU67} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxElse}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU68}{TU68} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxFor}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU69}{TU69} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxIf}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU70}{TU70} & Una \texttt{NewCellFactory} è in grado di istanziare una \texttt{HxVariable}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU71}{TU71} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxReturn}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU72}{TU72} & Una \texttt{NewCellFactory} è in grado di istanziare un \texttt{HxWhile}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU73}{TU73} & Un \texttt{Command} è in grado di creare un nuovo progetto. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \caption[Test di unità]{Test di unità}
 \label{tab:unit}
 \end{longtable}
@@ -2194,33 +2203,33 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 
 \hyperlink{TU45}{TU45} & \nogloxy{\texttt{swedesigner::server::utility::Compressor::-\linebreak zip()}}\\ \hline
 
-\hyperlink{TU46}{TU46} & \nogloxy{\texttt{swedesigner::client::view::AppView::-\linebreak initialize()}}\\ \hline
+\hyperlink{TU46}{TU46} & \nogloxy{\texttt{swedesigner::server::controller::-\linebreak RequestHandlerController::HandleGenerationRequest()}}\\ \hline
 
-\hyperlink{TU47}{TU47} & \nogloxy{\texttt{swedesigner::client::view::ProjectView::-\linebreak initialize()}}\\ \hline
+\hyperlink{TU47}{TU47} & \nogloxy{\texttt{swedesigner::server::compiler::java::-\linebreak JavaCompiler::compile()}}\\ \hline
 
-\hyperlink{TU48}{TU48} & \nogloxy{\texttt{swedesigner::client::view::ProjectView::-\linebreak initialize()}}\\ \hline
+\hyperlink{TU48}{TU48} & \nogloxy{\texttt{swedesigner::client::view::AppView::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU49}{TU49} & \nogloxy{\texttt{swedesigner::client::view::DetailsView::-\linebreak initialize()}}\\ \hline
+\hyperlink{TU49}{TU49} & \nogloxy{\texttt{swedesigner::client::view::AppView::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU50}{TU50} & \nogloxy{\texttt{swedesigner::client::view::NewCellView::-\linebreak initialize()}}\\ \hline
+\hyperlink{TU50}{TU50} & \nogloxy{\texttt{swedesigner::client::view::ProjectView::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU51}{TU51} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU51}{TU51} & \nogloxy{\texttt{swedesigner::client::view::ProjectView::-\linebreak renderActivity()}}\\ \hline
 
-\hyperlink{TU52}{TU52} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU52}{TU52} & \nogloxy{\texttt{swedesigner::client::view::ProjectView::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU53}{TU53} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU53}{TU53} & \nogloxy{\texttt{swedesigner::client::view::DetailsView::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU54}{TU54} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU54}{TU54} & \nogloxy{\texttt{swedesigner::client::view::DetailsView::-\linebreak render()}}\\ \hline
 
-\hyperlink{TU55}{TU55} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU55}{TU55} & \nogloxy{\texttt{swedesigner::client::view::NewCellView::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU56}{TU56} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU56}{TU56} & \nogloxy{\texttt{swedesigner::client::view::NewCellView::-\linebreak render()}}\\ \hline
 
-\hyperlink{TU57}{TU57} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU57}{TU57} & \nogloxy{\texttt{swedesigner::client::model::ProjectModel::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU58}{TU58} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU58}{TU58} & \nogloxy{\texttt{swedesigner::client::model::ProjectModel::-\linebreak initialize()}}\\ \hline
 
-\hyperlink{TU59}{TU59} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+\hyperlink{TU59}{TU59} & \nogloxy{\texttt{swedesigner::client::model::NewCellModel::-\linebreak initialize()}}\\ \hline
 
 \hyperlink{TU60}{TU60} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
 
@@ -2229,6 +2238,26 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 \hyperlink{TU62}{TU62} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
 
 \hyperlink{TU63}{TU63} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU64}{TU64} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU65}{TU65} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU66}{TU66} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU67}{TU67} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU68}{TU68} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU69}{TU69} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU70}{TU70} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU71}{TU71} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU72}{TU72} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
+
+\hyperlink{TU73}{TU73} & \nogloxy{\texttt{swedesigner::client::model::ProjectCommand::-\linebreak execute()}}\\ \hline
 
 \caption[Tracciamento test di unità-metodi]{Tracciamento test di unità-metodi}
 \label{tab:tu-met}
